no se habia subido bien

--- a/AnalisisExploratorio.ipynb
+++ b/AnalisisExploratorio.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# magic function para hacer que los graficos de matplotlib se renderizen en el notebook.\n",
@@ -24,42 +22,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filesProperati = os.listdir(\"datos/properati\")"
+    "filesProperati = filter( lambda f: not f.startswith('.'), os.listdir(\"datos/properati\"))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error con el archivo: properati-AR-2015-06-01-properties-sell.csv\n",
-      "Error con el archivo: properati-AR-2015-08-01-properties-sell.csv\n",
-      "Error con el archivo: properati-AR-2015-04-01-properties-sell.csv\n",
-      "Error con el archivo: properati-AR-2015-07-01-properties-sell.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataFrames = []\n",
     "for file_name in filesProperati:\n",
-    "    try:\n",
-    "        newDataFrame = pd.read_csv(\"datos/properati/\"+file_name)\n",
-    "        dataFrames.append(newDataFrame)\n",
-    "    except:\n",
+    "    #try:\n",
+    "    newDataFrame = pd.read_csv(\"datos/properati/\"+file_name)\n",
+    "    dataFrames.append(newDataFrame)\n",
+    "   # except:\n",
     "        #Ver causa de este error (ParserError)\n",
     "        #Error con el archivo: properati-AR-2015-06-01-properties-sell.csv\n",
     "        #Error con el archivo: properati-AR-2015-08-01-properties-sell.csv\n",
     "        #Error con el archivo: properati-AR-2015-04-01-properties-sell.csv\n",
     "        #Error con el archivo: properati-AR-2015-07-01-properties-sell.csv\n",
-    "        print \"Error con el archivo: \"+file_name"
+    "    #    print file_name+\"Primer except\"\n",
+    "     #   newDataFrame = pd.read_csv(\"datos/properati/\"+file_name, error_bad_lines = False,\n",
+    "     #                                 delimiter = \",\")\n",
+    "    #    dataFrames.append(newDataFrame)\n",
+    "       "
    ]
   },
   {
@@ -94,7 +85,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#¿que tipos de propiedades tenemos?\n",
