Se recuperan algunos precios, falta filtrar publicaciones con fecha erronea

--- a/filtrarPropiedadesCapitalYGba.ipynb
+++ b/filtrarPropiedadesCapitalYGba.ipynb
@@ -34,14 +34,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dataFrames = []\n",
+    "asociados = dict()\n",
+    "#Este diccionario es para luego eliminar segun fechas erroneas\n",
     "for file_name in filesProperati:\n",
+    "    \n",
     "    newDataFrame = pd.read_csv(\"datos/properati/\"+file_name)\n",
+    "    asociados[file_name] = newDataFrame\n",
     "    dataFrames.append(newDataFrame)\n",
     "       "
    ]
@@ -216,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nulsPriceAproxLocalCurr = 0\n",
@@ -323,22 +327,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for df in filtrados:\n",
-    "    df['surface_total_in_m2']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recupero la informacion que pueda, en dolares"
+    "# Recupero la informacion que pueda, precios en dolares y superficie"
    ]
   },
   {
@@ -347,28 +339,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recuperar_datos(rowProperati):\n",
-    "    \n",
-    "    if np.isnan(rowProperati['price_aprox_usd']):\n",
-    "    \n",
-    "        if (not(np.isnan(rowProperati['surface_total_in_m2'])) and (not(np.isnan(rowProperati['price_usd_per_m2'])))):\n",
+    "def recuperar_superficie(rowProperati):\n",
+    "    if pd.isnull(rowProperati['surface_total_in_m2']):\n",
+    "\n",
+    "        if (not((pd.isnull(rowProperati['price_aprox_usd']))) and (not(pd.isnull(rowProperati['price_usd_per_m2'])))):\n",
     "            \n",
-    "            rowProperati['price_aprox_usd'] = rowProperati['surface_total_in_m2']*rowProperati['price_usd_per_m2']\n",
-    "    if np.isnan(rowProperati['surface_total_in_m2']):\n",
+    "            return rowProperati['price_aprox_usd']/rowProperati['price_usd_per_m2']\n",
+    "            #rowProperati['surface_total_in_m2'] =\n",
+    "        else:\n",
+    "            return rowProperati['surface_total_in_m2']\n",
+    "    else:\n",
+    "        return rowProperati['surface_total_in_m2']\n",
     "\n",
-    "        if (not((np.isnan(rowProperati['price_aprox_usd']))) and (not(np.isnan(rowProperati['price_usd_per_m2'])))):\n",
-    "        \n",
-    "            rowProperati['surface_total_in_m2'] = rowProperati['price_aprox_usd']/rowProperati['price_usd_per_m2']#\n",
+    "def recuperar_precio_usd(rowProperati):\n",
+    "    \n",
+    "    if pd.isnull(rowProperati['price_aprox_usd']):\n",
+    "    \n",
+    "        if (not(pd.isnull(rowProperati['surface_total_in_m2'])) and (not(pd.isnull(rowProperati['price_usd_per_m2'])))):\n",
+    "            \n",
+    "            return rowProperati['surface_total_in_m2']*rowProperati['price_usd_per_m2']\n",
+    "            #rowProperati['price_aprox_usd'] = \n",
+    "        else:\n",
+    "            return rowProperati['price_aprox_usd']\n",
+    "    else:\n",
+    "        return rowProperati['price_aprox_usd']\n",
     "\n",
-    "    if np.isnan(rowProperati['price_usd_per_m2']):\n",
+    "def recuperar_ppm2(rowProperati):\n",
+    "    if pd.isnull(rowProperati['price_usd_per_m2']):\n",
     "        \n",
-    "         if (not(np.isnan(rowProperati['price_aprox_usd'])) and (not(np.isnan(rowProperati['surface_total_in_m2'])))):\n",
+    "        if (not(pd.isnull(rowProperati['price_aprox_usd'])) and (not(pd.isnull(rowProperati['surface_total_in_m2'])))):\n",
     "        \n",
     "            try:\n",
-    "                rowProperati['price_usd_per_m2'] = rowProperati['price_aprox_usd']/rowProperati['surface_total_in_m2']\n",
+    "                return rowProperati['price_aprox_usd']/rowProperati['surface_total_in_m2']\n",
+    "                #rowProperati['price_usd_per_m2'] = \n",
     "            except ZeroDivisionError:\n",
     "                #Despues se filtra\n",
-    "                rowProperati['price_usd_per_m2'] = 0"
+    "                return 0\n",
+    "        else:\n",
+    "            return rowProperati['price_usd_per_m2']\n",
+    "    else:\n",
+    "        return rowProperati['price_usd_per_m2']\n",
+    "\n",
+    "                "
    ]
   },
   {
@@ -378,25 +390,9 @@
    "outputs": [],
    "source": [
     "for df in filtrados:\n",
-    "    df.apply(lambda row: recuperar_datos(row),axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataFrames[0].loc[:0]['place_name']"
+    "     df['surface_total_in_m2'] = df.apply(lambda row: recuperar_superficie(row),axis=1)\n",
+    "     df['price_aprox_usd'] = df.apply(lambda row: recuperar_precio_usd(row),axis=1)\n",
+    "     df['price_usd_per_m2'] = df.apply(lambda row: recuperar_ppm2(row),axis=1)"
    ]
   },
   {
@@ -412,17 +408,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nulsPriceAproxUsd = 0\n",
-    "nulsPricePerM2usd = 0\n",
-    "nulsSuperficieTotal = 0\n",
+    "a = 0\n",
+    "b = 0\n",
+    "c = 0\n",
     "for df in filtrados:\n",
-    "    nulsPriceAproxUsd += df.price_aprox_usd.isnull().sum()\n",
-    "    nulsPricePerM2usd += df.price_usd_per_m2.isnull().sum()\n",
-    "    nulsSuperficieTotal += df.surface_total_in_m2.isnull().sum()\n",
+    "    a += df.price_aprox_usd.isnull().sum()\n",
+    "    b += df.price_usd_per_m2.isnull().sum()\n",
+    "    c += df.surface_total_in_m2.isnull().sum()\n",
     "\n",
-    "print str(nulsPriceAproxUsd)+\" nuls priceAproxUsd\"\n",
-    "print str(nulsSuperficieTotal)+\" nuls surface_total_in_m2\"\n",
-    "print str(nulsPricePerM2usd)+\" nuls pricePerM2usd\""
+    "print str(a)+\" nuls priceAproxUsd\"\n",
+    "print str(c)+\" nuls surface_total_in_m2\"\n",
+    "print str(b)+\" nuls pricePerM2usd\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Se recuperaron datos acerca del precio aproximado en usd y el precio por m2 en usd. No se pudieron recuperar nuevos datos acerca de la superficie total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elimino regisros de cada archivo que sean de fechas que no corresponden"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for key in asociados:\n",
+    "    #properati-AR-2016-04-01-properties-sell.csv\n",
+    "        \n",
+    "    fecha = key.split('-')[2:5]\n",
+    "    fechaInicio = ('-').join(fecha)\n",
+    "    fechaFin = ('-').join(key.split('-')[2:4])\n",
+    "    fechaFin = fechaFin + '31'\n",
+    "    df = asociados[key]\n",
+    "    df = df [df.created_on >= fechaInicio & df.created_on <= fechaFin]"
    ]
   },
   {
@@ -439,7 +468,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "unificacion.describe()"
