Armado de archivo

--- a/filtrarPropiedadesCapitalYGba.ipynb
+++ b/filtrarPropiedadesCapitalYGba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 184,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {
     "collapsed": true
    },
@@ -33,26 +33,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 186,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "dataFrames = []\n",
-    "asociados = dict()\n",
+    "\n",
+    "dataframes = []\n",
     "#Este diccionario es para luego eliminar segun fechas erroneas\n",
     "for file_name in filesProperati:\n",
     "    \n",
     "    newDataFrame = pd.read_csv(\"datos/properati/\"+file_name)\n",
-    "    asociados[file_name] = newDataFrame\n",
-    "    dataFrames.append(newDataFrame)\n",
+    "    dataframes.append(newDataFrame)\n",
+    "\n",
     "       "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## ¿Como filtramos por las zonas pedidas?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cantidad de registros con valor nulo en state_name: 0\n",
+      "Cantidad de registros con valor nulo en place_w_parent_names: 0\n",
+      "Cantidad de archivos que no cuentan con la columna state_name: 26\n",
+      "Cantidad de archivos que no cuentan con la columna place_w_parent_names: 0\n"
+     ]
+    }
+   ],
    "source": [
     "nulosStateName = 0\n",
     "nulosPlaceWParentNames = 0\n",
@@ -85,6 +105,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
    "metadata": {
     "collapsed": true
    },
@@ -103,9 +130,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neuquén 3073\n",
+      "Córdoba 28847\n",
+      "Chaco 303\n",
+      "Mendoza 2163\n",
+      "Chubut 612\n",
+      "Capital Federal 172817\n",
+      "San Luis 2424\n",
+      "Tucumán 1220\n",
+      "Misiones 2274\n",
+      "Tierra Del Fuego 484\n",
+      "Bs.As. G.B.A. Zona Oeste 92161\n",
+      "Corrientes 826\n",
+      "Formosa 254\n",
+      "Río Negro 6387\n",
+      "Santa Cruz 84\n",
+      "Montevideo 3\n",
+      "La Pampa 1002\n",
+      "Buenos Aires Costa Atlántica 47635\n",
+      "Buenos Aires Interior 15792\n",
+      "Bs.As. G.B.A. Zona Sur 50812\n",
+      "Santiago Del Estero 25\n",
+      "Jujuy 100\n",
+      "Santa Fe 32650\n",
+      "Salta 2286\n",
+      "La Rioja 52\n",
+      "Entre Ríos 5574\n",
+      "Bs.As. G.B.A. Zona Norte 142283\n",
+      "Catamarca 114\n",
+      "San Juan 116\n"
+     ]
+    }
+   ],
    "source": [
     "for zona in frecuencias: \n",
     "    print zona,frecuencias[zona]"
@@ -122,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {
     "collapsed": true
    },
@@ -141,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
@@ -184,9 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Capital Federal 172817\n",
+      "Bs.As. G.B.A. Zona Norte 142283\n",
+      "Bs.As. G.B.A. Zona Oeste 92161\n",
+      "Bs.As. G.B.A. Zona Sur 50812\n"
+     ]
+    }
+   ],
    "source": [
     "for key in frecuencias:\n",
     "    print key, frecuencias[key]"
@@ -202,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {
     "collapsed": true
    },
@@ -250,9 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58927 Nulls priceAproxLocalCurr\n",
+      "58927 Nulls priceAproxUsd\n",
+      "32915 Nulls Price Per M2\n",
+      "150676 Nulls pricePerM2USD\n",
+      "0 Inexistentes priceAproxLocalCurr\n",
+      "0 Inexistentes priceAproxUsd\n",
+      "26 Inexistentes pricePerM2\n",
+      "0 Inexistentes pricePerM2usd\n"
+     ]
+    }
+   ],
    "source": [
     "print str(nulsPriceAproxLocalCurr)+\" Nulls priceAproxLocalCurr\"\n",
     "print str(nulsPriceAproxUsd)+\" Nulls priceAproxUsd\"\n",
@@ -272,28 +361,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for df in filtrados:\n",
-    "    print df.columns\n",
-    "    print \"\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Observo que algunos archivos solo tienen surface_in_m2, no distingue entre si es cubierta o si es total, suponemos que es la superficie total. "
+    "## Observo que algunos archivos solo tienen una columna 'surface_in_m2', no distingue entre si es cubierta o si es total, suponemos que es la superficie total. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "101233"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nulsSuperficieTotal = 0\n",
     "for df in filtrados:\n",
@@ -313,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,59 +424,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 227,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def recuperar_superficie(rowProperati):\n",
-    "    if pd.isnull(rowProperati['surface_total_in_m2']):\n",
-    "\n",
-    "        if (not((pd.isnull(rowProperati['price_aprox_usd']))) and (not(pd.isnull(rowProperati['price_usd_per_m2'])))):\n",
-    "            \n",
-    "            return rowProperati['price_aprox_usd']/rowProperati['price_usd_per_m2']\n",
-    "            #rowProperati['surface_total_in_m2'] =\n",
-    "        else:\n",
-    "            return rowProperati['surface_total_in_m2']\n",
-    "    else:\n",
-    "        return rowProperati['surface_total_in_m2']\n",
-    "\n",
-    "def recuperar_precio_usd(rowProperati):\n",
-    "    \n",
-    "    if pd.isnull(rowProperati['price_aprox_usd']):\n",
-    "    \n",
-    "        if (not(pd.isnull(rowProperati['surface_total_in_m2'])) and (not(pd.isnull(rowProperati['price_usd_per_m2'])))):\n",
-    "            \n",
-    "            return rowProperati['surface_total_in_m2']*rowProperati['price_usd_per_m2']\n",
-    "            #rowProperati['price_aprox_usd'] = \n",
-    "        else:\n",
-    "            return rowProperati['price_aprox_usd']\n",
-    "    else:\n",
-    "        return rowProperati['price_aprox_usd']\n",
-    "\n",
-    "def recuperar_ppm2(rowProperati):\n",
-    "    if pd.isnull(rowProperati['price_usd_per_m2']):\n",
-    "        \n",
-    "        if (not(pd.isnull(rowProperati['price_aprox_usd'])) and (not(pd.isnull(rowProperati['surface_total_in_m2'])))):\n",
-    "        \n",
-    "            try:\n",
-    "                return rowProperati['price_aprox_usd']/rowProperati['surface_total_in_m2']\n",
-    "                #rowProperati['price_usd_per_m2'] = \n",
-    "            except ZeroDivisionError:\n",
-    "                #Despues se filtra\n",
-    "                return 0\n",
-    "        else:\n",
-    "            return rowProperati['price_usd_per_m2']\n",
-    "    else:\n",
-    "        return rowProperati['price_usd_per_m2']\n",
-    "\n",
-    "                "
+    "from utils import recuperar_superficie,recuperar_precio_usd,recuperar_ppm2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 229,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tomas/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n",
+      "/home/tomas/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
+      "/home/tomas/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    }
+   ],
    "source": [
     "for df in filtrados:\n",
     "     df['surface_total_in_m2'] = df.apply(lambda row: recuperar_superficie(row),axis=1)\n",
@@ -399,14 +474,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Chequeo que se hayan efectuado cambios"
+    "## Chequeo que se hayan recuperado datos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "58664 nuls priceAproxUsd\n",
+      "101233 nuls surface_total_in_m2\n",
+      "143935 nuls pricePerM2usd\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0\n",
     "b = 0\n",
@@ -432,31 +517,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Elimino regisros de cada archivo que sean de fechas que no corresponden"
+    "## A continuacion unifico y voy eliminando duplicados, teniendo en cuenta distintos subgrupos de columnas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "for key in asociados:\n",
-    "    #properati-AR-2016-04-01-properties-sell.csv\n",
-    "        \n",
-    "    fecha = key.split('-')[2:5]\n",
-    "    fechaInicio = ('-').join(fecha)\n",
-    "    fechaFin = ('-').join(key.split('-')[2:4])\n",
-    "    fechaFin = fechaFin + '31'\n",
-    "    df = asociados[key]\n",
-    "    df = df [df.created_on >= fechaInicio & df.created_on <= fechaFin]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {
     "collapsed": true
    },
@@ -467,25 +533,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "458073"
+      ]
+     },
+     "execution_count": 210,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "unificacion.describe()"
+    "len(unificacion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Elimino los registros que tengan todas las columnas identicas\n",
+    "a = unificacion.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "409127"
+      ]
+     },
+     "execution_count": 212,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unificacion.drop([\"Unnamed: 0\", \"extra\", \"properati_url\", \"image_thumbnail\",\"country_name\", \"lat\",\"lon\",\"operation\"], axis = 1, inplace= True)\n",
-    "unificacion.to_csv(\"properati - GBA Y CABA 2013-2017\")"
+    "#Elimino registros con misma url de properati (exceptuando a los nulos)\n",
+    "b = a[(~a.duplicated(subset=['properati_url'])) | (a['properati_url'].isnull())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "213869"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#elimino duplicados \n",
+    "len(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Si estan en el mismo lugar, tienen mismo precio y descripcion, son los mismos? \n",
+    "c = b.drop_duplicates(subset=[\"place_with_parent_names\",\"price_aprox_usd\",\"property_type\",\"surface_total_in_m2\",\"description\",\"created_on\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = c.drop_duplicates(subset = [\"created_on\",\"title\",\"description\",\"lat\",\"lon\",\"place_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "186173"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13179"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.price.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13161"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.price_aprox_usd.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13179"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.price_aprox_local_currency.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Elimino columnas con informacion redundantes o que no interesan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'country_name', u'created_on', u'currency', u'description',\n",
+       "       u'expenses', u'extra', u'floor', u'geonames_id', u'id',\n",
+       "       u'image_thumbnail', u'lat', u'lat-lon', u'lon', u'operation',\n",
+       "       u'place_name', u'place_with_parent_names', u'price',\n",
+       "       u'price_aprox_local_currency', u'price_aprox_usd', u'price_per_m2',\n",
+       "       u'price_usd_per_m2', u'properati_url', u'property_type', u'rooms',\n",
+       "       u'state_name', u'surface_covered_in_m2', u'surface_total_in_m2',\n",
+       "       u'title'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 224,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/tomas/anaconda2/lib/python2.7/site-packages/ipykernel_launcher.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "d.drop([\"properati_url\", \"image_thumbnail\",\"country_name\", \"lat\",\"lon\",\"operation\",\"price_aprox_local_currency\",\"price_per_m2\",\"price\",\"currency\"], axis = 1, inplace= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 226,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "d.to_csv(\"datosCabaYGBA\")"
    ]
   },
   {
